-Attempt to fix the overflow issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -337,7 +337,7 @@
 
   .projectsContent{
     // border: 1px solid yellow;
-    margin-bottom: 1.5rem;
+    // margin-bottom: 1.5rem;
   }
 }
 
@@ -375,7 +375,7 @@
   // align-items: center;
   // border: 1px solid blue; 
   height: 90vh;
-  overflow: none;
+  // overflow:
 }
 
 .layoutNavbarLogoItem{
